<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <WebView
        android:id="@+id/html_wv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/color_panel_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/color_label_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/greySecondary"
                    android:text="@string/color_label"/>
                <EditText
                    android:id="@+id/color_red_ed"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:hint="@string/hint_red"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/color_green_ed"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:hint="@string/hint_green"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/color_blue_ed"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_dark"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:hint="@string/hint_blue"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/apply_color_b"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_check_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/font_family_s"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.4"/>
                <Spinner
                    android:id="@+id/font_size_s"
                    android:layout_width="0dp"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
                <Spinner
                    android:id="@+id/text_alignment_s"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/font_bold_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/font_bold" />

                <Button
                    android:id="@+id/font_italic_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/font_italic" />
                <Button
                    android:id="@+id/font_underlined_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/font_underlined"/>
                <Button
                    android:id="@+id/font_strikethrough_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/font_strikethrough"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="false" />
                <Button
                    android:id="@+id/block_inline_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/block_inline_button"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>